@@ -1,4 +1,4 @@
 prog: partial_load
-vgopts: --partial-loads-ok=yes
+vgopts: --partial-loads-ok=yes --keep-stacktraces=alloc-then-free
 stderr_filter: filter_allocs
 stderr_filter_args: partial_load.c
